gloo-mesh/gm1.1/resources/gloo/gloo-mesh-ui-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: gloo-mesh-ui-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'dashboard.gloo-mesh.istiodemos.io'
    routes:          
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-mesh-dashboard-8090
            namespace: gloo-system
